--- a/SearchShot/WS/bin/WS.dll.config
+++ b/SearchShot/WS/bin/WS.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <appSettings>
@@ -9,6 +9,22 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="NewBinding0" maxBufferSize="524288" maxReceivedMessageSize="524288" />
+      </basicHttpBinding>
+    </bindings>
+    <services>
+      <service name="WS.Service1">
+        <endpoint address="Service1.svc" binding="basicHttpBinding" bindingConfiguration=""
+          name="webServSansIISConfY" contract="WS.IService1" />
+      </service>
+    </services>
+    <client>
+      <endpoint address="Service1.svc" binding="basicHttpBinding" bindingConfiguration=""
+        contract="WS.IService1" name="WebServSansIISY" kind="" endpointConfiguration="" />
+    </client> 
+    <standardEndpoints />
     <behaviors>
       <serviceBehaviors>
         <behavior>
