--- a/SearchShot/SearchShot/packages.config
+++ b/SearchShot/SearchShot/packages.config
@@ -19,4 +19,5 @@
   <package id="WP7Contrib.Net" version="1.0.0.16" targetFramework="wp80" />
   <package id="WP7Contrib.Services" version="1.0.0.16" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="WriteableBitmapEx" version="1.0.9.0" targetFramework="wp80" />
 </packages>
