--- a/SearchShot/WS/Web.config
+++ b/SearchShot/WS/Web.config
@@ -11,13 +11,16 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="NewBinding0" maxBufferSize="524288" maxReceivedMessageSize="524288" />
+        <binding name="NewBinding0" openTimeout="00:20:00" maxBufferPoolSize="2147483647"
+          maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"
+          transferMode="Streamed">
+          <readerQuotas maxArrayLength="2147483647" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <services>
       <service name="WS.Service1">
-        <endpoint address="Service1.svc" binding="basicHttpBinding" bindingConfiguration=""
-          name="webServSansIISConfY" contract="WS.IService1" />
+         <endpoint address="Service1.svc" binding="basicHttpBinding" bindingConfiguration="NewBinding0" name="webServSansIISConfY" contract="WS.IService1" />
       </service>
     </services>
     <client>
