--- a/SearchShot/packages/repositories.config
+++ b/SearchShot/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\SearchShot\packages.config" />
+  <repository path="..\WS\packages.config" />
 </repositories>
